# Sigejure

./: .gitignore  CMakeLists.txt  README.md
include/: adjuster.h  com_interpre.h  monitor.h  run_task.h  tasks.h  waiting.h
src/: adjuster.cpp  com_interpre.cpp  main.cpp  run_task.cpp  tasks.cpp  waiting.cpp
test/: testlib.cpp  testlib.h
